<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerbackgroundcolor">

        <Button
            android:id="@+id/backwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chiudi"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:textAllCaps="false"
            android:visibility="gone"
            style="@style/headerButtonStyle" />

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navheader_forward"
            android:layout_alignBaseline="@id/backwardButton"
            android:layout_marginRight="5dp"
            android:enabled="false"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            style="@style/headerButtonStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backwardButton"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:id="@+id/navheader_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/qr_receive_title"
                android:textSize="22dp"
                android:textColor="@android:color/white"
                android:textAlignment="center"/>

            <ProgressBar
                android:id="@+id/activityIndicator"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateOnly="true"
                android:keepScreenOn="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/navheader_title"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/navheader_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/qr_receive_show_message"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/navheader_title"
                android:textAlignment="center"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barlo"
        android:layout_marginTop="20dp"
        android:id="@+id/barmain">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/balance_before"
            android:id="@+id/img_result_qr" />


    </RelativeLayout>

</RelativeLayout>
