<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.fintechplatform.android.iban.ui.IBANActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerbackgroundcolor">

            <Button
                android:id="@+id/backwardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navheader_abort"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                style="@style/headerButtonStyle" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navheader_confirm"
                android:layout_alignBaseline="@id/backwardButton"
                android:layout_marginRight="5dp"
                android:enabled="false"
                android:layout_alignParentRight="true"
                style="@style/headerButtonStyle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backwardButton"
                android:layout_marginBottom="25dp">

                <TextView
                    android:id="@+id/navheader_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/iban_header"
                    android:textSize="22dp"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"/>

                <ProgressBar
                    android:id="@+id/activityIndicator"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:indeterminateOnly="true"
                    android:keepScreenOn="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/navheader_title"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tableheader_iban"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16dp"
                        android:text="IBAN"/>

                    <RelativeLayout
                        android:id="@+id/ibancontainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/tableheader_iban"
                        android:background="@color/white">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/nameTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            app:hintEnabled="true"
                            android:layout_marginTop="1dp">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/numberText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:hint="@string/iban_number"
                                android:padding="5dp"
                                android:inputType="textCapCharacters"
                                android:singleLine="true"
                                android:textSize="20dp"
                                android:layout_marginLeft="10dp"/>
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tableheader_residential"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:textSize="16dp"
                        android:layout_below="@id/ibancontainer"
                        android:text="Indirizzo"/>

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/tableheader_residential"
                        android:background="@color/white">
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/addressTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            app:hintEnabled="true"
                            android:layout_marginTop="1dp">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/addressText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:hint="@string/iban_address"
                                android:padding="5dp"
                                android:inputType="textCapWords"
                                android:singleLine="true"
                                android:layout_marginLeft="10dp"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/zipcodeTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:layout_below="@id/addressTextLayout"
                            app:hintEnabled="true"
                            android:layout_marginTop="1dp">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/zipcodeText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:hint="@string/iban_zipcode"
                                android:padding="5dp"
                                android:inputType="text"
                                android:singleLine="true"
                                android:layout_marginLeft="10dp"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/cityTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:layout_below="@id/zipcodeTextLayout"
                            app:hintEnabled="true"
                            android:layout_marginTop="1dp">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/cityText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:hint="@string/iban_city"
                                android:padding="5dp"
                                android:inputType="textCapWords"
                                android:singleLine="true"
                                android:layout_marginLeft="10dp"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/countryofresidenceTextLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:layout_below="@id/cityTextLayout"
                            app:hintEnabled="true"
                            android:layout_marginTop="1dp">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/countryofresidenceText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:hint="@string/signup_light_data_countryofresidence"
                                android:padding="5dp"
                                android:inputType="textCapWords"
                                android:singleLine="true"
                                android:layout_marginLeft="10dp"
                                android:focusable="false"
                                android:textSize="20dp" />
                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>
                </RelativeLayout>

            </ScrollView>


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
